--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,14 +3,14 @@
 
 <div class="row">
     <div class="col-8">
-<h1>Menu WV New </h1>
+<h1>Motivational Phrase about Technology</h1>
 <p>
-    Este menu es una version de la app de Estapar brasil
+    Esta es una frase motivadora sobre la evolición diara que se vive en el mundo de la Tecnología...
 </p>
     </div>
 
     <div class="col-4">
-        <img src="assets/img/estapar VOLSWAGEN.png"class="img-thumbnail">
+        <img src="assets/img/SwtewardBrand.jpeg"class="img-thumbnail">
     </div>
 
 
